added asset api for getting folders icons
